--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@ body{
     padding: 10px 20px;
     border: none;
     outline: none;
-    background: rgb(0, 119, 255);
+    background: rgb(195, 228, 9);
     color: #FFF;
     font-size: 20px;
     font-weight: bold;
@@ -80,7 +80,7 @@ body{
 }
 
 .inputBox button:hover{
-    background: rgb(0, 17, 255);
+    background: rgb(206, 209, 7);
     transition: all 0.3s ease;
 }
 
@@ -98,3 +98,19 @@ body{
     font-weight: 900;
     display: none;
 }
+
+
+
+html {
+    scroll-behavior: smooth;
+   }
+   
+   a {
+    text-decoration: none;
+    color: black;
+   } 
+   
+   #down {
+    margin-top: 100%;
+    padding-bottom: 25%;
+   } 
